Java 17->23,gradle 7->8,Panama for dot product