@@ -1,9 +1,20 @@
 plugins {
     id 'java'
 }
-tasks.withType(Test) {
-    useJUnitPlatform()
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ['--add-modules=jdk.incubator.vector']
 }
+
+
+tasks.withType(Test) {
+    jvmArgs += ['--add-modules=jdk.incubator.vector']
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += ['--add-modules=jdk.incubator.vector']
+}
+
 repositories {
     mavenCentral()
 }
@@ -11,7 +22,6 @@ dependencies {
     implementation  'org.apache.commons:commons-math3:3.6.1'
     implementation  'it.unimi.dsi:fastutil:8.5.12'
     implementation  'com.google.guava:guava:31.1-jre'
-    // Logging
     implementation  'org.slf4j:slf4j-api:2.0.5'
     implementation  'org.slf4j:log4j-over-slf4j:2.0.5'
 
